@@ -3,7 +3,8 @@ use Mojito::Model::Transform;
 use Data::Dumper::Concise;
 
 # Transform each collection: notes, collection, users
-my $t = Mojito::Model::Transform->new;
+my $transfer_type = 'elasticsearch';
+my $t = Mojito::Model::Transform->new(transfer_type => 'elasticsearch');
 my @collections = @{ $t->collections };
 foreach my $collection (@collections) {
     print "Collection: $collection\n";
